; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/ubi/extr_fastmap.c_ubi_fastmap_init_checkmap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/ubi/extr_fastmap.c_ubi_fastmap_init_checkmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubi_volume = type { i32, %struct.ubi_device* }
%struct.ubi_device = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ubi_fastmap_init_checkmap(%struct.ubi_volume* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ubi_volume*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ubi_device*, align 8
  store %struct.ubi_volume* %0, %struct.ubi_volume** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ubi_volume*, %struct.ubi_volume** %4, align 8
  %8 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %7, i32 0, i32 1
  %9 = load %struct.ubi_device*, %struct.ubi_device** %8, align 8
  store %struct.ubi_device* %9, %struct.ubi_device** %6, align 8
  %10 = load %struct.ubi_device*, %struct.ubi_device** %6, align 8
  %11 = getelementptr inbounds %struct.ubi_device, %struct.ubi_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %30

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @BITS_TO_LONGS(i32 %16)
  %18 = load i32, i32* @GFP_KERNEL, align 4
  %19 = call i32 @kcalloc(i32 %17, i32 8, i32 %18)
  %20 = load %struct.ubi_volume*, %struct.ubi_volume** %4, align 8
  %21 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  %22 = load %struct.ubi_volume*, %struct.ubi_volume** %4, align 8
  %23 = getelementptr inbounds %struct.ubi_volume, %struct.ubi_volume* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %15
  %27 = load i32, i32* @ENOMEM, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %30

29:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %26, %14
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @kcalloc(i32, i32, i32) #1

declare dso_local i32 @BITS_TO_LONGS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
